--- a/.Files/Conky/conky.config
+++ b/.Files/Conky/conky.config
@@ -67,6 +67,7 @@ conky.config = {
 -- Boolean value, if true, Conky will be forked to background when started.
     background = true,
 
+
 -- Adds spaces around certain objects to stop them from moving other things
 -- around, this only helps if you are using a mono font
 -- Options: right, left or none
@@ -105,6 +106,9 @@ conky.config = {
 --  End Miscellaneous Section
 };
 
+-- Commands that are not used
+-- ${execi 1 ping -c1 8.8.8.8 | sed -n 's/.*time=\(.*\) /\1/p'}  ${execi 1 dgw}
+
 
 ---------------------------------------------------
 ---------------------------------------------------
@@ -114,15 +118,17 @@ ${font Monospace:size=14}${color0}${offset 1400}Kernel:    ${exec uname -r}
 ${offset 1400}${font Monospace:size=14}${color0}${battery_bar 11,75 BAT0}    ${battery_percent BAT0}% Battery
 ${offset 1400}${cpubar 11,75}    ${cpu cpu0}% ${freq} Mhz
 
-${offset 1400}SSID:      ${wireless_essid wlp5s0}
-${offset 1400}IP:        ${addr wlp5s0} 
-${offset 1400}Quality:   ${wireless_link_qual wlp5s0}%\
+${if_existing /proc/net/route wlp5s0}${offset 1400}SSID:      ${wireless_essid wlp5s0}
+${offset 1400}Internal:  ${addr wlp5s0}
+${offset 1400}Public:    ${exec curl ifconfig.me} 
+${offset 1400}Quality:   ${wireless_link_qual wlp5s0}% ${endif}
+${if_existing /proc/net/route enp0s31f6}${offset 1400}Up: ${upspeedf enp0s31f6}${alignr}Down: ${downspeedf enp0s31f6}
+${offset 1400}Internal:       ${addr enp0s31f6}
+${offest 1400}External:       ${exec curl ifconfig.me}
+${endif}
+${offset 1400}Memory:    Used    | Free    | Avail.
+${offset 1400}           ${mem}   | ${memfree}  | ${memeasyfree}
 
-
-${offset 1400}Memory:
-${offset 1400}Used:      ${mem}    
-${offset 1400}Free:      ${memfree}
-${offset 1400}Available: ${memeasyfree}
 
 
 
