--- a/.Files/Conky/conky.config
+++ b/.Files/Conky/conky.config
@@ -114,25 +114,28 @@ conky.config = {
 ---------------------------------------------------
 
 conky.text = [[ 
+
+
+
+
+
+
+
+
 ${font Monospace:size=14}${color0}${offset 1400}Kernel:    ${exec uname -r}
 ${offset 1400}${font Monospace:size=14}${color0}${battery_bar 11,75 BAT0}    ${battery_percent BAT0}% Battery
 ${offset 1400}${cpubar 11,75}    ${cpu cpu0}% ${freq} Mhz
 
-${if_existing /proc/net/route wlp5s0}${offset 1400}SSID:      ${wireless_essid wlp5s0}
+${if_existing /proc/net/route wlp5s0}${offset 1400}SSID:      ${exec 'nmcli connection show | grep -i wifi | cut -d" " -f1'}
 ${offset 1400}Internal:  ${addr wlp5s0}
 ${offset 1400}Public:    ${exec curl ifconfig.me} 
-${offset 1400}Quality:   ${wireless_link_qual wlp5s0}% ${endif}
+${offset 1400}Quality:   ${exec 'nmcli dev wifi | grep -P "\*" | grep -Po "[0-9]{1,}\sMbit\/s\s+[0-9]{2}" | cut -d" " -f4'} ${endif}
 ${if_existing /proc/net/route enp0s31f6}${offset 1400}Up: ${upspeedf enp0s31f6}${alignr}Down: ${downspeedf enp0s31f6}
 ${offset 1400}Internal:       ${addr enp0s31f6}
 ${offest 1400}External:       ${exec curl ifconfig.me}
 ${endif}
 ${offset 1400}Memory:    Used    | Free    | Avail.
-${offset 1400}           ${mem}   | ${memfree}  | ${memeasyfree}
-
-
-
-
-
+${offset 1400}           ${mem}  | ${memfree}  | ${memeasyfree}
 
 
 
