--- a/.Files/tmux.conf
+++ b/.Files/tmux.conf
@@ -1,7 +1,7 @@
-# Options
+# Configurations 
 
-## Colors
-set-option -sa terminal-overrides ",xterm*:Tc"
+## Set alacrity
+set -g default-terminal "alacritty"
 
 ## Mouse support
 set -g mouse on
@@ -12,31 +12,65 @@ set -g pane-base-index 1
 set-window-option -g pane-base-index 1
 set-option -g renumber-windows on
 
-# Remove random characters on launch
+## Remove random characters on launch
 set -sg escape-time 50
 
-# Bindings
+## Bindings
 
-## set vi mode
+### set vi mode
 set-window-option -g mode-keys vi
 
-## Enable Visual mode
+### Enable Visual mode
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi C-v send-keys -X rectangle-toggle
 bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
-## Open panes in current directory
+### Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
 
-# Load plugins
-set -g @plugin 'tmux-plugins/tpm'
+# decide whether we're in a Vim process
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+
+bind-key -n 'M-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
+bind-key -n 'M-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
+bind-key -n 'M-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
+bind-key -n 'M-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
+
+tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
+
+if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
+  "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
+  "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+
+bind-key -n 'M-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
+
+bind-key -T copy-mode-vi 'M-h' select-pane -L
+bind-key -T copy-mode-vi 'M-j' select-pane -D
+bind-key -T copy-mode-vi 'M-k' select-pane -U
+bind-key -T copy-mode-vi 'M-l' select-pane -R
+bind-key -T copy-mode-vi 'M-\' select-pane -l
+bind-key -T copy-mode-vi 'M-Space' select-pane -t:.+
+
+## Load plugins
+set -g @plugin 'christoomey/vim-tmux-navigator'
+set -g @plugin 'janoamaral/tokyo-night-tmux'
+set -g @plugin 'rickstaa/tmux-notify'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-logging'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-#set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin "janoamaral/tokyo-night-tmux"
 set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tpm'
 
+# Bootstrap TPM if does not exist
+if-shell -b '[[ -d "~/.tmux/plugins/tpm" ]]' \
+  "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 
-# Activate TPM
+## Activate TPM
 run '~/.tmux/plugins/tpm/tpm'
