--- a/.Files/tmux.conf
+++ b/.Files/tmux.conf
@@ -34,7 +34,7 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # decide whether we're in a Vim process
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
-  | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
@@ -44,9 +44,9 @@ bind-key -n 'M-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
-  "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
+    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\'  'select-pane -l'"
 if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
-  "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
+    "bind-key -n 'M-\\' if-shell \"$is_vim\" 'send-keys C-\\\\'  'select-pane -l'"
 
 bind-key -n 'M-Space' if-shell "$is_vim" 'send-keys C-Space' 'select-pane -t:.+'
 
@@ -69,7 +69,7 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
 
 # Bootstrap TPM if does not exist
-if-shell -b '[[ -d "~/.tmux/plugins/tpm" ]]' \
+if-shell -b '[[ ! -d "~/.tmux/plugins/tpm" ]]' && \
   "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
 
 ## Activate TPM
