--- a/.Files/tmux.conf
+++ b/.Files/tmux.conf
@@ -68,9 +68,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
 
-# Bootstrap TPM if does not exist
-if-shell -b '[[ ! -d "~/.tmux/plugins/tpm" ]]' && \
-  "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm"
+# Bootstrap TPM if does not exist:
+if-shell '[ ! -d "~/.tmux/plugins/tpm" ]' && \
+  "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins"
 
-## Activate TPM
+## Activate TPM:
 run '~/.tmux/plugins/tpm/tpm'
