--- a/.Files/tmux.conf
+++ b/.Files/tmux.conf
@@ -1,5 +1,9 @@
 # Configurations 
 
+## Colour
+set -g default-terminal "screen-256color"
+set -ag terminal-overrides ",xterm-256color:RGB"
+
 ## Set alacrity
 set -g default-terminal "alacritty"
 
@@ -29,18 +33,17 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
-# Smart pane switching with awareness of Vim splits.
-# See: https://github.com/christoomey/vim-tmux-navigator
-
-# decide whether we're in a Vim process
+### decide whether we're in a Vim process
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
     | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
 
+### Move between VIM and TMUX
 bind-key -n 'M-h' if-shell "$is_vim" 'send-keys C-h' 'select-pane -L'
 bind-key -n 'M-j' if-shell "$is_vim" 'send-keys C-j' 'select-pane -D'
 bind-key -n 'M-k' if-shell "$is_vim" 'send-keys C-k' 'select-pane -U'
 bind-key -n 'M-l' if-shell "$is_vim" 'send-keys C-l' 'select-pane -R'
 
+### Check TMUX version
 tmux_version='$(tmux -V | sed -En "s/^tmux ([0-9]+(.[0-9]+)?).*/\1/p")'
 
 if-shell -b '[ "$(echo "$tmux_version < 3.0" | bc)" = 1 ]' \
@@ -68,9 +71,9 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tpm'
 
-# Bootstrap TPM if does not exist:
-if-shell '[ ! -d "~/.tmux/plugins/tpm" ]' && \
-  "git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins"
+# Bootstrap TPM if does not exist
+if-shell "test ! -d ~/.tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 
-## Activate TPM:
+## Activate TPM
 run '~/.tmux/plugins/tpm/tpm'
