--- a/.Files/tmux.conf
+++ b/.Files/tmux.conf
@@ -31,7 +31,10 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 
 ### Open panes in current directory
 bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
+bind '%' split-window -h -c "#{pane_current_path}"
+
+### Toggle synchronize panes
+bind "a" setw synchronize-panes
 
 ### decide whether we're in a Vim process
 is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
